--- a/03_background/background.tex
+++ b/03_background/background.tex
@@ -528,7 +528,7 @@ Parallel Reality (PR) & Systems comprising two environments, one real \& the oth
 %next section was rendering off the page
 
 \section{Presence}
-
+\label{lit-review-presencec}
 Any investigation into alternate realities, virtual reality in particular, is likely to involve discussion of \textit{presence} - the subjective experience of being in one place or environment, even when one is physically situated in another~\cite{Witmer1998}. Presence is distinguished from the concept of \textit{immersion}, an objective description of a technology describing the extent to which it is capable of delivering an illusion of reality to the senses of the user~\cite{Slater1997}. In current theoretical models, the sense of presence is seen as the outcome, or a direct function of, immersion; the more inclusive, extensive, surrounding \& vivd the virtual environment is, or the more similar the transformations in the virtual environment are to those in the real world, the higher the sense of presence~\cite{Constantin2003}.
 
 Related is the concept of \textit{involvement}, defined in this context as the psychological state experienced as a consequence of focusing one's energy \& attention on a coherent set of stimuli \& it is theorized that both involvement \& immersion are necessary for experiencing a sense of presence~\cite{Witmer1998}.
