--- a/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
+++ b/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
@@ -516,9 +516,9 @@ Through this first stage of evaluation the Mirrorshades platform has shown itsel
 
 \section{Stage 2 - Informing PR Implementation}
 
-The first stage of evaluation into the Mirrorshades platform led to the conclusion that applying a mobile PR system to a cultural heritage scenario provides an experience that is more enjoyable \& engaging than a traditional virtual heritage scenario making use of immersive VR presentation, while also leading participants to a greater understanding of the relationships between the RW \& VR content presented to them. However despite these benefits, the Mirrorshades platform is far from perfect. While certain drawbacks inherent in the system, such as the visual acuity of the video see-through solution \& the lag in the IPS, could not be iterated upon due to lack of suitable technology, other aspects of the system that affect the overall PR experience could be investigated - namely the way that transitions between RW \& VR visual stimuli are performed, including whether the default view is 100\% RW or a mix of RW \& VR.
+The first stage of evaluation into the Mirrorshades platform led to the conclusion that applying a mobile PR system to a cultural heritage scenario provides an experience that is more enjoyable \& engaging than a traditional virtual heritage scenario making use of immersive VR presentation via CAVE or static HMD, while also leading participants to a greater understanding of the relationships between the RW \& VR content presented to them. While certain drawbacks in the system highlighted by the first stage of evaluation, such as the visual acuity of the video see-through solution \& the lag in the IPS, could not be iterated upon due to lack of suitable technology, other aspects of the system that affect the overall PR experience could be investigated - namely the way that transitions between RW \& VR visual stimuli are performed, including whether the default view is 100\% RW or a mix of RW \& VR, as participants in stage 1 of the evaluation were furnished with only a single style of transition.
 
-Stage 2 of the evaluation was divided into two parts. In the first (stage 2.1), evaluation focussed upon assessing participants' reactions to \& preferences toward three different transition styles, while in the second (stage 2.2), evaluation looked at reactions \& preferences in response to two different default views comprising RW/VR mixes. In terms of the combined Milgram/Waterworh model, this second stage of evaluation pertains to assessing the effect upon participants' focus \& sensus when performing oscillations along the locus axis using different techniques. Stage 2.1 investigates oscillations between the RW extreme of the locus axis \& other points upon the locus axis (such as in figure \ref{transition-rw-vr-hard.png}) while stage 2.2 looks into oscillations that are limited in terms of how far toward the RW extremum of the locus axis the participant can reach (such as in figure \ref{transition-mix-vr.png}).
+Stage 2 of the evaluation was divided into two parts. In the first (stage 2.1), evaluation focussed upon assessing participants' reactions to \& preferences toward three different transition styles, while in the second (stage 2.2), evaluation looked at reactions \& preferences in response to two different default views comprising RW/VR mixes. In terms of the combined Milgram/Waterworh model, this second stage of evaluation pertains to assessing the effect upon participants' focus of attention (\& to a lesser extent, sensus of attention) when performing oscillations along the locus axis using different techniques. Stage 2.1 investigates oscillations where the default view is 100\%, so between the RW extreme of the locus of attention axis \& other points upon the locus axis (such as in figure \ref{transition-rw-vr-hard.png}), while stage 2.2 looks into oscillations where the default view is a mix of RW \& VR, limiting how far toward the RW extreme of the locus axis the participant can reach (such as in figure \ref{transition-mix-vr.png}).
 
 While stage 1 of the evaluation investigated the suitability of applying a mobile PR platform to the particular use case of virtual heritage, stage 2 while still within the same virtual heritage scenario has wider use for informing implementation of PR systems in general \& not just within the context of virtual heritage.
 
@@ -526,44 +526,23 @@ While stage 1 of the evaluation investigated the suitability of applying a mobil
 
 \subsection{Evaluation Techniques}
 
-As with the stage 1 investigation, a range of both qualitative \& quantitative data were collected. Evaluating participants' preferences toward different styles of transitioning between RW \& VR visual stimuli in different situations pertains to studying their reactions \& responses to ascertain the effect upon their focus \& sensus of attention, concepts which are largely psychological in nature \& highly subjective~\cite{Ijsselsteijn2001}. Thus, subjective measures will again produce the bulk of the data for evaluation, however they will again be backed up by objective log data to support or contradict any relationships that emerge.
+As with the stage 1 investigation, a range of both qualitative \& quantitative data were collected. Evaluating participants' preferences toward different styles of transitioning between RW \& VR visual stimuli pertains to studying their reactions \& responses to ascertain the effect upon their focus \& sensus of attention, concepts which are largely psychological in nature \& highly subjective~\cite{Ijsselsteijn2001}. Thus, subjective measures will again produce the bulk of the data for evaluation, however they will again be backed up by objective log data to support or contradict any relationships that emerge.
 
 Stage 2 participants completed the same pre-task questionnaire as the stage 1 participants \& Likert-type questionnaires that shared certain items with that from stage 1 were also used; the stage 2.1 participants completed a 12-item questionnaire, while stage 2.2 participants completed a 9-item questionnaire. The SUS questionnaire was not used, while post-task interviews \& loggigng were present.
 
 %=========================================================================================================
 
-
-
-
-In addition to the Likert-type questionnaire, all stage 2 participants also completed the igroup presence questionnaire\footnote{\url{http://www.igroup.org/pq/ipq/index.php}} (IPQ).
-
-Presence does not have a single widely agreed upon definition \& those definitions that are commonly used, including that adopted by this thesis of \textit{the experience of being in one place or environment, even when one is physically situated in another} (see section \ref{lit-review-presencec}), are subjective in nature. Thus attempts to quantify or `measure' the experience of presence are met with difficulty \& many different approaches have been adopted, some more or less suitable to certain scenarios than others. Broadly, these approaches can be categorised as either subjective (most commonly post task questionnaires), behavioural (measurement/observation of actions that do not stem from conscious thought) or physiological (heart rate, skin conductance, etc.)~\cite{Insko2003}.
+In addition to the Likert-type questionnaire, all stage 2 participants also completed the igroup presence questionnaire~\cite{Schubert2001} (IPQ). Presence does not have a single widely agreed upon definition \& those definitions that are commonly used, including that adopted by this thesis of \textit{the experience of being in one place or environment, even when one is physically situated in another} (see section \ref{lit-review-presencec}), are subjective in nature. Thus attempts to quantify or `measure' the experience of presence are met with difficulty \& many different approaches have been adopted, some more or less suitable to certain scenarios than others. Broadly, these approaches can be categorised as either subjective (most commonly post task questionnaires), behavioural (measurement/observation of actions that do not stem from conscious thought) or physiological (heart rate, skin conductance, etc.)~\cite{Insko2003}.
 
 In this categorisation system, one could consider the log data recorded by the Mirrorshades platform to provide a behavioural insight into the participants' sense of presence \& the interview \& Likert-type questionnaires to provide a subjective insight. For this second stage of evaluation where direct comparison is made between different styles of transition in hopes of ascertaining which result in less pronounced breaks in presence, the use of an established presence questionnaire was deemed a prudent addition to the evaluation techniques to inquire more directly about the sense of presence than the other evaluation techniques.
 
-The IPQ was chosen due to its better suitability than other established questionnaires to a PR scenario. Many established presence questionnaires are written in such a manner that they apply well to scenarios in which users are immersed in a VR (or remote, in the case of telepresence) environment at the intentional exclusion of their RW environment, with wording \& weighting of questions associating negativity to awareness of the stimuli from the RW environment. Whilst this approach is ideal for a traditional VR scenario in which immersion in a VR environment at the complete exclusion of the user's RW environment is the ultimate goal, it does not apply well to a PR scenario in which the ultimate goal is to imbue the user with the ability (\& desire) to transition between both RW \& VR environments, wherein maintaining an awareness of one environment while perceiving stimuli from the other is beneficial to the overall experience, rather than detrimental as in the case of a traditional VR scenario.
+The IPQ was chosen due to its better suitability than other established questionnaires to a PR scenario. Many established presence questionnaires are written in such a manner that they apply well to scenarios in which users are immersed in a VR (or remote, in the case of telepresence) environment at the intentional exclusion of their RW environment, with wording \& weighting of questions associating negativity to awareness of the stimuli from the RW environment. Whilst this approach is ideal for a traditional VR scenario in which immersion in a VR environment at the complete exclusion of the user's RW environment is the ultimate goal, it does not apply well to a PR scenario in which the ultimate goal is to imbue the user with the ability (\& desire) to transition between both RW \& VR environments, wherein maintaining an awareness of one environment while perceiving stimuli from the other is quite possibly beneficial to the overall experience, rather than detrimental as in the case of a traditional VR scenario.
 
-This situation is largely one of terminology \& can be explained more clearly using the combined Milgram/Waterworth model. Whereas most established presence questionnaires assess presence in terms of the user's position upon the locus of attention axis, where a sense of presence means a position toward the VR extreme of the axis \& no sense of presence as a position toward the RW extreme of the axis, a PR scenario wherein the user is encouraged to engage with both environments instead wishes to assess presence in terms of the user's position upon the focus of attention axis, thus allowing assessment of the severity of breaks in presence, when defined as deflections upon the focus of attention axis from the presence extreme in the direction of the absence extreme.
+This situation is largely one of terminology \& can be explained more clearly using the combined Milgram/Waterworth model. Whereas most established presence questionnaires assess presence in terms of the user's position upon the locus of attention axis, where a `sense of presence' means a position toward the VR extreme of the axis \& no sense of presence a position toward the RW extreme of the axis, a PR scenario wherein the user is encouraged to engage with both environments instead wishes to assess presence in terms of the user's position upon the focus of attention axis, thus allowing assessment of the severity of breaks in presence when defined as deflections upon the focus of attention axis from the presence extreme in the direction of the absence extreme.
 
+This situation renders some established presence questionnaires unsuitable. For example, Witmer \& Singer's presence questionnaire~\cite{Witmer1998} poses several questions that directly enquire about aspects of the virtual environment (such as \textit{13. How involved were you in the virtual environment experience?}) but poses no questions that pertain to the RW environment with the sole exception of a comparison between VR \& RW (\textit{7. How much did your experiences in the virtual environment seem consistent with your real world experiences?}). Other questionnaires, such as that used in an experiment by Slater \& Steed, in which participants walked through a VR field of trees~\cite{Slater1998}, are less extreme in their weighting toward questions only about VR, asking questions both directly about the VR environment (\textit{Please rate your sense of being in the field among the plants}) but also enquiring as to the RW environment in a neutral sense (\textit{During the time of the experience, which was strongest on the whole, your sense of being in the virtual field, or of being in the real world of the laboratory?}).
 
-
-
-
-
-
-
-
-
-
-Simply put, many presence questionnaires are written to assess presence in a virtual or remote environment, rather than assessing the magnitude of presence regardless of environment (break in presence)
-
-Simply put, many presence questionnaires assess \textit{presence in the virtual or remote environment}, associating `no presence' when the user is
-
-
-
-simply put, many presence questionnaires are written seemingly to assess 
-
-whether the user is experiencing a sense of presence in a VR environment \textit{or not}, rather than whether the user is experiencing a sense of presence in the VR environment \textit{or the RW environment}
+However the IPQ
 
 
 
@@ -571,36 +550,29 @@ whether the user is experiencing a sense of presence in a VR environment \textit
 
 
 
-presence or not
-rather than presence in VR/remote or presence in RW
+
+
+
+
+
 
 
 ***but why didn't we add physiological measures as well?
 
 
 
-Most presence questionnaires, ***such as
 
 
 
 
-This renders many of the established presence questionnaires unsuitable for use in this stage 2 evaluation, 
-
-For example, the Witmer \& Singer presence questionnaire~\cite{Witmer1998} features many questions that directly ask about aspects of the virtual environment, such as \textit{13. How involved were you in the virtual environment experience?}. 
 
 
-~\cite{Slater1998}
 
-posed several questions about sense of presence in the virtual environment, with the only mention of presence in the real environment being a comparison 
 
-\textit{During the time of the experience, which was strongest on the whole, your sense of being in the virtual field, or of being in the real world of the laboratory?}
 
-an `either or' situation
 
-\textit{During the time of the experience, did you often think to yourself that you were actually just standing in an office wearing a helmet or did the virtual field of plants overwhelm you?}
 
-to immerse the user in the virtual or remote environment at the exclusion of their real environment
-rather than distribution
+
 
 
 It is hypothesized that a manner of transitioning between visual stimuli which results in a less severe BIP will be preferable to a manner of transitioning which results in a worse BIP. As focus in the Waterworth model is most closely related to presence in the VR literature~\cite{Waterworth2001}, one of the subjective measures that will be used in this evaluation will be an established presence measure, to try to capture the behaviour of the user's position upon the focus axis.
