Talking about IPQ

--- a/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
+++ b/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
@@ -536,15 +536,27 @@ In addition to the Likert-type questionnaire, all stage 2 participants also comp
 
 In this categorisation system, one could consider the log data recorded by the Mirrorshades platform to provide a behavioural insight into the participants' sense of presence \& the interview \& Likert-type questionnaires to provide a subjective insight. For this second stage of evaluation where direct comparison is made between different styles of transition in hopes of ascertaining which result in less pronounced breaks in presence, the use of an established presence questionnaire was deemed a prudent addition to the evaluation techniques to inquire more directly about the sense of presence than the other evaluation techniques.
 
-The IPQ was chosen due to its better suitability than other established questionnaires to a PR scenario. Many established presence questionnaires are written in such a manner that they apply well to scenarios in which users are immersed in a VR (or remote, in the case of telepresence) environment at the intentional exclusion of their RW environment, with wording \& weighting of questions associating negativity to awareness of the stimuli from the RW environment. Whilst this approach is ideal for a traditional VR scenario in which immersion in a VR environment at the complete exclusion of the user's RW environment is the ultimate goal, it does not apply well to a PR scenario in which the ultimate goal is to imbue the user with the ability (\& desire) to transition between both RW \& VR environments, wherein maintaining an awareness of one environment while perceiving stimuli from the other is quite possibly beneficial to the overall experience, rather than detrimental as in the case of a traditional VR scenario.
+%=====================
 
-This situation is largely one of terminology \& can be explained more clearly using the combined Milgram/Waterworth model. Whereas most established presence questionnaires assess presence in terms of the user's position upon the locus of attention axis, where a `sense of presence' means a position toward the VR extreme of the axis \& no sense of presence a position toward the RW extreme of the axis, a PR scenario wherein the user is encouraged to engage with both environments instead wishes to assess presence in terms of the user's position upon the focus of attention axis, thus allowing assessment of the severity of breaks in presence when defined as deflections upon the focus of attention axis from the presence extreme in the direction of the absence extreme.
+Due to the nature of the Mirrorshades platform, most established presence questionnaires could not be directly applied.
 
-This situation renders some established presence questionnaires unsuitable. For example, Witmer \& Singer's presence questionnaire~\cite{Witmer1998} poses several questions that directly enquire about aspects of the virtual environment (such as \textit{13. How involved were you in the virtual environment experience?}) but poses no questions that pertain to the RW environment with the sole exception of a comparison between VR \& RW (\textit{7. How much did your experiences in the virtual environment seem consistent with your real world experiences?}). Other questionnaires, such as that used in an experiment by Slater \& Steed, in which participants walked through a VR field of trees~\cite{Slater1998}, are less extreme in their weighting toward questions only about VR, asking questions both directly about the VR environment (\textit{Please rate your sense of being in the field among the plants}) but also enquiring as to the RW environment in a neutral sense (\textit{During the time of the experience, which was strongest on the whole, your sense of being in the virtual field, or of being in the real world of the laboratory?}).
+Established presence questionnaires are predominantly written for application to `traditional' VR scenarios in which the user is immersed in a VR (or remote, in the case of telepresence) environment at the intentional exclusion of stimuli from their RW environment. Within the embodied cognition framework, the sense of presence is argued to develop from the construction of a spatial-functional mental model of the VR environment, through a combination of representation of bodily actions as possible in the VR environment \& suppression of incompatible sensory input from the RW environment~\cite{Schubert2001}.
 
-However the IPQ
+However considering a PR scenario within the same context, sensory input from the RW environment, that features high spatial equivalence between its RW \& VR environments, is not incompatible; in fact it should be considered complimentary. Whereas a traditional VR experience attempts to create in the user's mind a new spatial-functional model that exists separate to \& replaces the model of their RW surroundings, PR systems attempt to augment the user's existing model of their RW surroundings or perhaps create a complementary model that sits parallel to it, by providing complementary sensory input that depicts an alternative vision of the same space.
+
+This situation is perhaps better explained as a difference in the use of the term `presence', which can be explained using the combined Milgram/Waterworth model. Whereas established presence questionnaires assess presence in terms of the user's position upon the locus of attention axis, where a `sense of presence' means a position toward the VR extreme of the axis \& `no sense of presence' means a position toward the RW extreme of the axis, a PR scenario wherein the user is encouraged to engage with both environments instead should assess presence in terms of the user's position upon the focus of attention axis, allowing assessment of the severity of breaks in presence when defined as deflections upon the focus of attention axis from the presence extreme in the direction of the absence extreme.
+
+Many established presence questionnaires that feature wording \& weighting of questions associating negativity to awareness of the stimuli from the RW environment are thus unsuitable for use in assessment of a PR scenario. Whilst this approach is ideal for a traditional VR scenario in which immersion in a VR environment at the complete exclusion of the user's RW environment is the ultimate goal, it does not apply well to a PR scenario in which the ultimate goal is to imbue the user with the ability (\& desire) to transition between both RW \& VR environments, wherein maintaining an awareness of one environment while perceiving stimuli from the other is beneficial, rather than detrimental, to the overall experience.
+
+For example, Witmer \& Singer's presence questionnaire~\cite{Witmer1998} poses several questions that directly enquire about aspects of the virtual environment (such as \textit{13. How involved were you in the virtual environment experience?}) but poses no questions that pertain to the RW environment with the sole exception of a single comparison between VR \& RW (\textit{7. How much did your experiences in the virtual environment seem consistent with your real world experiences?}, an assessment of how well bodily actions were represented as possible in the VR environment). Other questionnaires, such as that used in an experiment by Slater \& Steed in which participants walked through a VR field of trees~\cite{Slater1998}, are less extreme in their weighting toward questions only about VR, asking questions both directly about the VR environment (\textit{Please rate your sense of being in the field among the plants}) but also enquiring as to the RW environment in a neutral sense (\textit{During the time of the experience, which was strongest on the whole, your sense of being in the virtual field, or of being in the real world of the laboratory?}).
 
 
+instead of allocation of attention between two incompatible sets of environmental stimuli as with traditional VR, PR systems require distribution of attention between two complementary sets of environmental stimuli that fundamentally describe the `same' environment.
+
+The IPQ
+
+
+INV is all about RW
 
 
 
