Talking about IPQ

--- a/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
+++ b/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
@@ -526,7 +526,7 @@ While stage 1 of the evaluation investigated the suitability of applying a mobil
 
 \subsection{Evaluation Techniques}
 
-As with the stage 1 investigation, a range of both qualitative \& quantitative data were collected. Evaluating participants' preferences toward different styles of transitioning between RW \& VR visual stimuli pertains to studying their reactions \& responses to ascertain the effect upon their focus \& sensus of attention, concepts which are largely psychological in nature \& highly subjective~\cite{Ijsselsteijn2001}. Thus, subjective measures will again produce the bulk of the data for evaluation, however they will again be backed up by objective log data to support or contradict any relationships that emerge.
+As with the stage 1 investigation, a range of both qualitative \& quantitative data were collected. Evaluating participants' preferences toward different styles of transitioning between RW \& VR visual stimuli pertains to studying their reactions \& responses to ascertain the effect upon their focus \& sensus of attention, concepts which are largely psychological in nature \& highly subjective~\cite{Ijsselsteijn2001}. Thus, subjective measures will produce the bulk of the data for evaluation, however they will again be backed up by objective log data to support or contradict any relationships that emerge.
 
 Stage 2 participants completed the same pre-task questionnaire as the stage 1 participants \& Likert-type questionnaires that shared certain items with that from stage 1 were also used; the stage 2.1 participants completed a 12-item questionnaire, while stage 2.2 participants completed a 9-item questionnaire. The SUS questionnaire was not used, while post-task interviews \& loggigng were present.
 
@@ -538,25 +538,24 @@ In this categorisation system, one could consider the log data recorded by the M
 
 %=====================
 
-Due to the nature of the Mirrorshades platform, most established presence questionnaires could not be directly applied.
+Due to the nature of the Mirrorshades platform, most established presence questionnaires could not be directly applied. Established presence questionnaires are predominantly written for application to `traditional' VR scenarios in which the user is immersed in a VR (or remote, in the case of telepresence) environment at the intentional exclusion of stimuli from their RW environment. Framed within an embodied cognition framework, the sense of presence in such a scenario is argued to develop from the construction of a spatial-functional mental model of the VR environment, through a combination of representation of bodily actions as possible in the VR environment \& suppression of incompatible sensory input from the RW environment~\cite{Schubert2001}. However considering a PR scenario within the same framework, sensory input from the RW environment that features high spatial equivalence with the VR environment is not incompatible; in fact it should be considered complimentary. Whereas a traditional VR experience attempts to create in the user's mind a new spatial-functional model that exists separate to, incompatible with \& suppressing the model of their RW surroundings, PR systems should instead be considered as enhancing the user's existing model of their RW surroundings or as creating a complementary model that sits parallel to it.
 
-Established presence questionnaires are predominantly written for application to `traditional' VR scenarios in which the user is immersed in a VR (or remote, in the case of telepresence) environment at the intentional exclusion of stimuli from their RW environment. Within the embodied cognition framework, the sense of presence is argued to develop from the construction of a spatial-functional mental model of the VR environment, through a combination of representation of bodily actions as possible in the VR environment \& suppression of incompatible sensory input from the RW environment~\cite{Schubert2001}.
-
-However considering a PR scenario within the same context, sensory input from the RW environment, that features high spatial equivalence between its RW \& VR environments, is not incompatible; in fact it should be considered complimentary. Whereas a traditional VR experience attempts to create in the user's mind a new spatial-functional model that exists separate to \& replaces the model of their RW surroundings, PR systems attempt to augment the user's existing model of their RW surroundings or perhaps create a complementary model that sits parallel to it, by providing complementary sensory input that depicts an alternative vision of the same space.
-
-This situation is perhaps better explained as a difference in the use of the term `presence', which can be explained using the combined Milgram/Waterworth model. Whereas established presence questionnaires assess presence in terms of the user's position upon the locus of attention axis, where a `sense of presence' means a position toward the VR extreme of the axis \& `no sense of presence' means a position toward the RW extreme of the axis, a PR scenario wherein the user is encouraged to engage with both environments instead should assess presence in terms of the user's position upon the focus of attention axis, allowing assessment of the severity of breaks in presence when defined as deflections upon the focus of attention axis from the presence extreme in the direction of the absence extreme.
+This distinction is perhaps better explained as a difference in the use of the term `presence', which can be explained using the combined Milgram/Waterworth model. Established presence questionnaires assess presence in terms of the user's position upon the locus of attention axis, where `a sense of presence' means a position toward the VR extreme of the axis \& `no sense of presence' means a position toward the RW extreme of the axis. In this stage of the evaluation into the Mirrorshades PR platform however, the aim of the evaluation is to assess presence in terms of the user's position upon the focus of attention axis, to assess the severity of breaks in presence defined as deflections upon the focus of attention axis from the presence extreme in the direction of the absence extreme. Instead of assessing allocation of locus of attention between two incompatible sets of environmental stimuli, this stage of evaluation hoped to assess the impact that a locus of attention oscillating between complimentary sets of environmental stimuli has upon focus of attention.
 
 Many established presence questionnaires that feature wording \& weighting of questions associating negativity to awareness of the stimuli from the RW environment are thus unsuitable for use in assessment of a PR scenario. Whilst this approach is ideal for a traditional VR scenario in which immersion in a VR environment at the complete exclusion of the user's RW environment is the ultimate goal, it does not apply well to a PR scenario in which the ultimate goal is to imbue the user with the ability (\& desire) to transition between both RW \& VR environments, wherein maintaining an awareness of one environment while perceiving stimuli from the other is beneficial, rather than detrimental, to the overall experience.
 
 For example, Witmer \& Singer's presence questionnaire~\cite{Witmer1998} poses several questions that directly enquire about aspects of the virtual environment (such as \textit{13. How involved were you in the virtual environment experience?}) but poses no questions that pertain to the RW environment with the sole exception of a single comparison between VR \& RW (\textit{7. How much did your experiences in the virtual environment seem consistent with your real world experiences?}, an assessment of how well bodily actions were represented as possible in the VR environment). Other questionnaires, such as that used in an experiment by Slater \& Steed in which participants walked through a VR field of trees~\cite{Slater1998}, are less extreme in their weighting toward questions only about VR, asking questions both directly about the VR environment (\textit{Please rate your sense of being in the field among the plants}) but also enquiring as to the RW environment in a neutral sense (\textit{During the time of the experience, which was strongest on the whole, your sense of being in the virtual field, or of being in the real world of the laboratory?}).
 
-
-instead of allocation of attention between two incompatible sets of environmental stimuli as with traditional VR, PR systems require distribution of attention between two complementary sets of environmental stimuli that fundamentally describe the `same' environment.
-
-The IPQ
+The IPQ assesses presence upon three factors; spatial presence (SP), involvement (INV) \& realness (REAL). While SP questions assess how much bodily actions are represented as possible in the VR environment \& REAL questions assess the `realness' of the VR environment by eliciting direct comparisons with the RW environment, INV questions assess suppression of incompatible sensory input from the RW environment but are not worded in a manner that presents attention paid to this sensory input as negative.
 
 
-INV is all about RW
+
+
+
+
+
+
+
 
 
 
