--- a/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
+++ b/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
@@ -550,7 +550,19 @@ The IPQ assesses presence upon three factors; spatial presence (SP), involvement
 
 
 
+For a well implemented traditional VR experience that elicits a high sense of presence in the user, one would expect their IPQ results to score highly in all three factors.
 
+As discussed by Constantin~\cite{Constantin2003a}, SP3 (\textit{``I did not feel present in the virtual space''}, anchored between \textit{``did not feel''} \& \textit{``felt present''}) \& INV2 (\textit{``I was not aware of my real environment''}, anchored between \textit{``fully disagree''} \& \textit{``fully agree''}) would seem to be tied together, as a high involvement in the RW environment would detract from 
+
+the feeling that bodily actions are possible in the VR
+thus reducing SP
+
+however in PR
+the bodily actions are compatible
+
+so the two are not necessarily tied
+
+And reducing INV may even have a positive eeffect on SP?
 
 
 
