--- a/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
+++ b/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
@@ -550,21 +550,11 @@ The IPQ assesses presence upon three factors; spatial presence (SP), involvement
 
 
 
-For a well implemented traditional VR experience that elicits a high sense of presence in the user, one would expect their IPQ results to score highly in all three factors.
+For a well implemented traditional VR experience that elicits a high sense of presence in the user, one would expect their IPQ results to score highly in all three factors. As discussed by Constantin~\cite{Constantin2003a}, SP3 (\textit{``I did not feel present in the virtual space''}, anchored between \textit{``did not feel''} \& \textit{``felt present''}) \& INV2 (\textit{``I was not aware of my real environment''}, anchored between \textit{``fully disagree''} \& \textit{``fully agree''}) would seem to be tied together, as a high involvement in the RW environment would intuitively reduce spatial presence by hampering the sense that bodily actions as possible in the VR environment.
 
-As discussed by Constantin~\cite{Constantin2003a}, SP3 (\textit{``I did not feel present in the virtual space''}, anchored between \textit{``did not feel''} \& \textit{``felt present''}) \& INV2 (\textit{``I was not aware of my real environment''}, anchored between \textit{``fully disagree''} \& \textit{``fully agree''}) would seem to be tied together, as a high involvement in the RW environment would detract from 
+However, in a PR scenario that features high spatial equivalence this tie between SP \& INV may prove not demonstrate. Due to the spatial equivalence between the two environments, bodily actions in the VR environment are compatible with those in the RW environment, so SP may score highly even when INV scores low as RW sensory input isn't suppressed but in fact encouraged. In fact, it may even be the case that an inverse relationship presents between SP3 \& INV2, as heightened awareness of the RW environment leads the user to feel more comfortable performing bodily actions that are shared with thee VR environment.
 
-the feeling that bodily actions are possible in the VR
-thus reducing SP
-
-however in PR
-the bodily actions are compatible
-
-so the two are not necessarily tied
-
-And reducing INV may even have a positive eeffect on SP?
-
-
+At the very least one would expect the PR scenarios to present lower INV scores without drastically reducing SP scores, whilst a more optimistic expectation would be for lower INV scores \& \textit{heightened} SP scores.
 
 
 
